default string parameter empty instead of null